<resources>
    <string name="app_name">Test</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="flash">flash</string>
    <string name="pulse">pulse</string>
    <string name="blink">blink</string>
    <string name="rainbow">rainbow</string>
    <string name="interests">Interests</string>
    <string name="status_searching">Searching for nearby wearable…</string>
    <string name="custom">Custom</string>
    <string name="status_scan_ended">Scan ended…</string>
    <string name="interests_title">Interests</string>
    <string name="interests_subtitle">We\'ll use these to detect whether you match with people
        around you based on common interests.</string>
    <string name="save">Save</string>
    <string name="wearableName">Comm-on Jacket</string>
    <string name="custom_title">Customize your jacket\'s ambient colors.</string>
    <string name="custom_subtitle">These colors are shown whenever you have ambient mode on and
        there are no matches nearby.</string>
    <string name="counter">%1$d/%2$d</string>
    <string name="MainActivityTitle">We need access to the following services</string>
    <string name="connecting">Wearable found, connecting…</string>
    <string name="wearable_image_description">image of connected wearable</string>
    <string name="dialogInstructionSet1">Assign a color to this interest</string>
    <string name="dialogInstructionSet2">Your wearable will light up with this color when you meet
        someone that shares this interest.</string>
    <string name="dialogInstructionEdit1">Edit this interest</string>
    <string name="dialogInstructionEdit2">You can either change the assigned color of this interest,
        or remove it altogether.</string>
    <string name="ok">OK</string>
    <string name="errorDialogTitle">%1$d/%1$d interests selected</string>
    <string name="errorDialogText">You have selected the maximum number of interests. Remove an
        interest before selecting the next one.</string>
    <string name="debug">skip searching for wearable (debug)</string>
</resources>
