<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.sss.test.ColorView
        android:id="@+id/colorView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textSize="22sp" />

            <SeekBar
                android:id="@+id/sbRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:minWidth="200dp"
                android:minHeight="29dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textSize="22sp" />

            <SeekBar
                android:id="@+id/sbGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:minHeight="29dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textSize="22sp" />

            <SeekBar
                android:id="@+id/sbBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:minHeight="29dp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnBlink"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blink" />

            <Button
                android:id="@+id/btnPulse"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulse" />

            <Button
                android:id="@+id/btnRainbow"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rainbow" />
            <Button
                android:id="@+id/btnPair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find BLE module"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="422dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="440dp" />


</android.support.constraint.ConstraintLayout>