<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CustomActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/backgroundDark"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDark"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/custom_title"
            android:textColor="@color/background"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/custom_subtitle"
            android:textColor="@color/background"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.sss.wearable.Views.ColorView
        android:id="@+id/colorView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle_red" />

            <SeekBar
                android:id="@+id/sbRed"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:max="255"
                android:minWidth="200dp"
                android:minHeight="29dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle_green" />

            <SeekBar
                android:id="@+id/sbGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:minHeight="29dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle_blue" />

            <SeekBar
                android:id="@+id/sbBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:minHeight="29dp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnBlink"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:background="@drawable/button_interest_"
                android:text="@string/blink"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnPulse"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:background="@drawable/button_interest_"
                android:text="@string/pulse"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnRainbow"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:width="100dp"
                android:background="@drawable/button_interest_"
                android:text="@string/rainbow"
                android:textColor="@android:color/black" />

        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/flBtnSave"
        android:layout_width="380dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.sss.wearable.Views.BottomView
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="71dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textColor="@color/background" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>